--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  <main>
      <!--hero image-->
     <section class="hero-images">
-        <div class="container section">
+        <div class="container">
             <h1 class="title">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
         </div>    
