--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
 
     <section class="tools">
-        <div class="container section">
+        <div class="container">
                 <h2 class="tools-h visually-hidden">Tools</h2>
                 <ul class="tools-list">
                  <li class="tools-item">
@@ -76,7 +76,7 @@
 
     <!--our team-->
     <section class="our-team">
-        <div class="container section">
+        <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team">
                   <li class="team-item">
